var/httpd/htdocs/skins/Agent/default/css/ITSM.Agent.ConfigItem.Zoom.css
/* OTOBO is a web-based ticketing system for service organisations.

Copyright (C) 2001-2020 OTRS AG, https://otrs.com/
Copyright (C) 2019-2025 Rother OSS GmbH, https://otobo.io/

This program is free software: you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation, either version 3 of the License, or (at your option) any later version.
This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
You should have received a copy of the GNU General Public License
along with this program. If not, see <https://www.gnu.org/licenses/>.
*/

/**
 * @package     Skin "Default"
 * @section     ITSM ConfigItem
 */

@media screen,projection,tv,handheld {

    #SelectionRow {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        align-items: center;
        justify-content: space-between;
        width: 100%;
        margin-top: 24px;
    }

    #VersionSelectionContainer {
        float: right;
        display: inline;
    }

    #PageSelection {
        float: left;
        display: inline flex;
        flex-direction: row;
        flex-wrap: nowrap;
        align-items: center;
        justify-content: left;
        width: 80%;
    }

    #PageSelection > a {
        margin-right: 8px;
    }

    #PageSelection > h2 {
        margin-bottom: 0px;
        font-size: 13px;
        font-weight: bold;
        color: #00023c;
        padding-left: 7px;
    }

    #PageSelection button.PageSelectionButton {
        width: auto;
        max-width: 240px;
        height: 22px;
    }
    
    #PageSelection button.PageSelectionButton.Selected {
        background-color: #0000fc;
    }

    .oooContentGrid {
        display: grid;
        margin-top: 24px;
        grid-row-gap: 12px;
        grid-column-gap: 12px;
        grid-auto-rows: minmax(min-content, 1vh);
    }

    .oooContentCell {
        background: #fff;
        border-radius: 10px;
        padding: 8px;
    }

    .oooContentCell.ConfigItemLinks_Cell .CellContent {
        max-height: 400px;
        overflow-y: auto;
    }

    .FieldDisplayRow {
        display: grid;
    }

    .FieldDisplayRow:not(:first-child) {
        margin-top: 12px;
    }

    .oooContentGrid label {
        color: #929292;
        text-shadow: 0 1px 0 #FAFAFA;
    }

    .SetDisplayValue {
        margin-top: 10px;
        margin-left: 24px;
        display: grid;
        grid-template-columns: calc( 50% - 24px ) 1fr;
    }

    .SetDisplayValue div.Clear {
        display: none;
    }

    .DynamicFieldRichTextLink {
        display: none;
    }

    .DynamicFieldRichTextContent.Hidden {
        display: block;
    }

    .DynamicFieldRichTextContent > .OverlayDynamicFieldRichTextiFrame {
        height: auto;
        max-height: 400px;
        width: calc(100% - 64px);
    }

} /* end @media */

